--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,9 @@
 
 # misc
 .DS_Store
-.env.local
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 
 npm-debug.log*
