--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "graphql-ws": "^5.14.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-radio-group": "^3.0.3",
-    "react-router-dom": "^6.12.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
