--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql-request": "^6.1.0",
     "graphql-ws": "^5.14.0",
     "materialize-css": "^1.0.0-rc.2",
+    "newrelic": "^12.0.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
