--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.8",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
     "graphql-ws": "^5.14.0",
     "materialize-css": "^1.0.0-rc.2",
     "newrelic": "^12.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-radio-group": "^3.0.3",
