--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "retro-board",
+  "module": "bundler",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.8",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
